Add static analysis tools: PMD, SpotBugs, Error Prone, NullAway
- Add PMD 7.16.0 for dead code detection (unused methods/fields/variables)
- Add SpotBugs 4.9.8 for bug and security detection
- Add Error Prone 2.36.0 + NullAway 0.12.3 for null safety
- Add jspecify 1.0.0 for @Nullable annotations
- Fix all NullAway warnings with proper null checks and @Nullable
- Fix Error Prone warnings (Locale.ROOT, instanceof, timezone)
- Update commit hook to include all static analysis tools
- Update code_rule.md with new tool documentation

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>